Modified how Osate is launched to ease passing jvm options. Allowed one to override jvmopts for the Osate launcher in sireum.properties with key sireum.launcher.osate.jvmopts as comma separated options for the JVM. Made Osate launcher available in stable.